add AsyncCacheableRequestProcessor + to MapMetaController